Use the system encoding to generate the *.argfile (#458)